# nexus

./: .rustfmt.toml  Cargo.toml  README.md
examples/: hello_world.rs
examples/test-nexus/: Cargo.toml
examples/test-nexus/src/: handlers.rs  main.rs
src/: body.rs  error.rs  extract.rs  handler.rs  lib.rs  macros.rs  response.rs  router.rs  service.rs  util.rs
src/extract/: rejection.rs  request_parts.rs
src/extract/builtin/: mod.rs  query.rs  typed_header.rs
src/handler/: future.rs  into_service.rs
src/router/: empty_router.rs  future.rs  method_filter.rs  route.rs
src/service/: future.rs
