[package]
name = "nexus"
authors = ["shiyivei"]
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/*"]

[features]
default = ["headers"]



[dependencies]
async-trait = "0.1"
bitflags = "1.0"
bytes = "1.0"
color-eyre = "0.6.2"
futures-util = {version ="0.3", default-features = false, features =["alloc"]}

http = "0.2"
http-body = "0.4.3"
hyper = {version = "0.14", default-features = false, features =["server","tcp","http1","stream"]}
pin-project-lite = "0.2.7"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
sync_wrapper = "0.1.2"
tokio = {version = "1" ,features = ["time"]}
tokio-util = "0.6"
tower = {version ="0.4",default-features = false, features = ["util","buffer","make"]}
tower-http = {version ="0.1",features = ["add-extension","map-response-body"]}
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# optional features
headers = {optional = true,version = "0.3"}