[package]
name = "test-nexus"
version = "0.1.0"
edition = "2021"
authors = ["shiyivei"]

[dependencies]
color-eyre = "0.6.2"
hyper = "0.14.24"
nexus = {path = "../.."}
serde = {version = "1.0.152",features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
tower-http = {version ="0.1.1",features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.2.0"
