[package]
name = "test-nexus"
version = "0.1.0"
edition = "2021"
authors = ["shiyivei"]

[dependencies]
color-eyre = "0.6.2"
headers = "0.3.4"
hyper = "0.14.24"
nexus = {path = "../..",features = ["headers"]}
serde = {version = "1.0",features = ["derive"]}
tokio = {version = "1.0", features = ["full"]}
tower-http = {version ="0.1.1",features = ["full"]}
tower = { version = "0.4", features = ["util", "timeout"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
http = "0.2.8"

# optional features
